[package]
name = "worker-rust"
version = "0.1.0"
edition = "2024"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.7.5"
tokio = { version = "1.49.0", features = ["io-util"] }
pin-project = "1.1.11" 
futures-util = { version = "0.3.32", default-features = false }
base64 = "0.22.1"
bytes = "1.11.1"
uuid = "1.18.1"

[dev-dependencies]
tokio-test = "0.4.4"

[profile.release]
lto = true
strip = true
codegen-units = 1
